Admin service to demote files - Sets a maximum embargo stage for the file, whenever calculated, will never be more permissive than the stage listed in adminDemote - If a demoted file is already releaseState=PUBLIC, these changes will not be indexed - There is a TODO to handle removing demoted files from a public index during the release build/publish processes
