# src/routers/admin.ts
@@ -85,6 +85,7 @@ const createAdminRouter = (config: AppConfig, authFilter: (scopes: string[]) => 
         try {
           const indexer = await getIndexer();
 
+          // Update files in DB
           const updatedFiles = await fileService.adminPromote(filter, stage, {
             returnDocuments: true,
           });
@@ -94,6 +95,7 @@ const createAdminRouter = (config: AppConfig, authFilter: (scopes: string[]) => 
           }
           const errors: StringMap<Error> = {};
 
+          // Update file indices with changes
           const { results } = await PromisePool.withConcurrency(20)
             .for(updatedFiles)
             .handleError((e, file) => {
@@ -113,6 +115,75 @@ const createAdminRouter = (config: AppConfig, authFilter: (scopes: string[]) => 
           const fileSummary = fileSummaryResponse(results);
           const response = {
             message: `Successfully updated and re-indexed ${fileSummary.total} files. adminPromote value set to ${stage}`,
+            ...fileSummary,
+            errors,
+          };
+          return res.status(200).json(response);
+        } catch (e) {
+          return res.status(500).send(`Unexpected error updating files: ${e}`);
+        }
+
+        return res.status(200).json(filter);
+      } catch (error) {
+        // Catch Param Validation Errors
+        return res.status(400).send(error.toString());
+      }
+    }),
+  );
+
+  /**
+   * Add admin restrict value to files based on a filter
+   */
+  router.post(
+    '/demote/:stage',
+    wrapAsync(async (req: Request, res: Response) => {
+      // Get Params:
+      try {
+        const filter = validator.fileFilter(req.body);
+        const stage = validator.embargoStage(req.params.stage);
+
+        const dryRun = req.query.dryRun === 'true';
+
+        if (dryRun) {
+          const selectedFiles = await fileService.getFiles(filter);
+          const fileSummary = fileSummaryResponse(selectedFiles);
+          const response = { message: 'DRY RUN ONLY - No changes made.', ...fileSummary };
+          return res.status(200).json(response);
+        }
+
+        try {
+          const indexer = await getIndexer();
+
+          // Update files in DB
+          const updatedFiles = await fileService.adminDemote(filter, stage, {
+            returnDocuments: true,
+          });
+
+          if (!updatedFiles) {
+            return res.status(400).send(`No files updated.`);
+          }
+          const errors: StringMap<Error> = {};
+
+          // Update file indices with changes
+          const { results } = await PromisePool.withConcurrency(20)
+            .for(updatedFiles)
+            .handleError((e, file) => {
+              logger.error(`Update Doc Error: ${e}`);
+              logger.error(`Update Doc Error: ${e.stack}`);
+              errors[file.objectId] = e;
+            })
+            .process(async file => {
+              logger.debug(`Recalculating and reindexing file: ${file.objectId}`);
+              const recalculatedFile = await recalculateFileState(file);
+              await indexer.updateFile(recalculatedFile);
+              return file;
+            });
+
+          await indexer.release();
+
+          const fileSummary = fileSummaryResponse(results);
+          const response = {
+            message: `Successfully updated and re-indexed ${fileSummary.total} files. adminDemote value set to ${stage}`,
             ...fileSummary,
             errors,
           };
